// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorSettings renders EditorSettings 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Popover
      bsClass="popover"
      id="cog-popover"
      placement="bottom"
      title="Settings"
    >
      <div
        className="cog-popover-dropdown"
      >
        <div
          className="cog-popover-dropdown-title"
        >
          Syntax
        </div>
        <ForwardRef
          disabled={false}
          id="mode-dropdown"
        >
          <DropdownToggle
            bsClass="dropdown-toggle"
            bsRole="toggle"
            open={false}
            useAnchor={false}
          >
            Ruby
          </DropdownToggle>
          <DropdownMenu
            bsClass="dropdown-menu"
            bsRole="menu"
            id="settings-dropdown"
            pullRight={false}
          >
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              onClick={[Function]}
            >
              Text
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              onClick={[Function]}
            >
              Json
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              onClick={[Function]}
            >
              Ruby
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              onClick={[Function]}
            >
              Html_ruby
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              onClick={[Function]}
            >
              Sh
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              onClick={[Function]}
            >
              Xml
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              onClick={[Function]}
            >
              Yaml
            </MenuItem>
          </DropdownMenu>
        </ForwardRef>
      </div>
      <div
        className="cog-popover-dropdown"
      >
        <div
          className="cog-popover-dropdown-title"
        >
          Keybind
        </div>
        <ForwardRef
          disabled={false}
          id="keybindings-dropdown"
        >
          <DropdownToggle
            bsClass="dropdown-toggle"
            bsRole="toggle"
            open={false}
            useAnchor={false}
          >
            vim
          </DropdownToggle>
          <DropdownMenu
            bsClass="dropdown-menu"
            bsRole="menu"
            id="settings-dropdown"
            pullRight={false}
          >
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              onClick={[Function]}
            >
              Default
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              onClick={[Function]}
            >
              Emacs
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              onClick={[Function]}
            >
              Vim
            </MenuItem>
          </DropdownMenu>
        </ForwardRef>
      </div>
      <div
        className="cog-popover-dropdown"
      >
        <div
          className="cog-popover-dropdown-title"
        >
          Theme
        </div>
        <ForwardRef
          id="themes-dropdown"
        >
          <DropdownToggle
            bsClass="dropdown-toggle"
            bsRole="toggle"
            open={false}
            useAnchor={false}
          >
            Github
          </DropdownToggle>
          <DropdownMenu
            bsClass="dropdown-menu"
            bsRole="menu"
            id="settings-dropdown"
            pullRight={false}
          >
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              onClick={[Function]}
            >
              Github
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              onClick={[Function]}
            >
              Monokai
            </MenuItem>
          </DropdownMenu>
        </ForwardRef>
      </div>
      <div
        className="cog-popover-dropdown"
      >
        <div
          className="cog-popover-dropdown-title"
        >
          Autocompletion
        </div>
        <div
          className="dropdown btn-group"
        >
          <input
            checked={true}
            id="autocompletion-checkbox"
            name="autocompletion"
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
      <div
        className="cog-popover-dropdown"
      >
        <div
          className="cog-popover-dropdown-title"
        >
          Live Autocompletion
        </div>
        <div
          className="dropdown btn-group"
        >
          <input
            checked={false}
            id="live-autocompletion-checkbox"
            name="liveAutocompletion"
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </Popover>
  }
  placement="bottom"
  rootClose={true}
  trigger={
    Array [
      "click",
    ]
  }
>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="link"
    className="editor-button"
    disabled={false}
    id="cog-btn"
  >
    <Icon
      name="cog"
      size="lg"
      type="fa"
    />
  </Button>
</OverlayTrigger>
`;

exports[`EditorSettings renders EditorSettings w/preview 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Popover
      bsClass="popover"
      id="cog-popover"
      placement="bottom"
      title="Settings"
    >
      <div
        className="cog-popover-dropdown"
      >
        <div
          className="cog-popover-dropdown-title"
        >
          Syntax
        </div>
        <ForwardRef
          disabled={true}
          id="mode-dropdown"
        >
          <DropdownToggle
            bsClass="dropdown-toggle"
            bsRole="toggle"
            open={false}
            useAnchor={false}
          >
            Ruby
          </DropdownToggle>
          <DropdownMenu
            bsClass="dropdown-menu"
            bsRole="menu"
            id="settings-dropdown"
            pullRight={false}
          >
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              onClick={[Function]}
            >
              Text
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              onClick={[Function]}
            >
              Json
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              onClick={[Function]}
            >
              Ruby
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              onClick={[Function]}
            >
              Html_ruby
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              onClick={[Function]}
            >
              Sh
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              onClick={[Function]}
            >
              Xml
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              onClick={[Function]}
            >
              Yaml
            </MenuItem>
          </DropdownMenu>
        </ForwardRef>
      </div>
      <div
        className="cog-popover-dropdown"
      >
        <div
          className="cog-popover-dropdown-title"
        >
          Keybind
        </div>
        <ForwardRef
          disabled={true}
          id="keybindings-dropdown"
        >
          <DropdownToggle
            bsClass="dropdown-toggle"
            bsRole="toggle"
            open={false}
            useAnchor={false}
          >
            vim
          </DropdownToggle>
          <DropdownMenu
            bsClass="dropdown-menu"
            bsRole="menu"
            id="settings-dropdown"
            pullRight={false}
          >
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              onClick={[Function]}
            >
              Default
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              onClick={[Function]}
            >
              Emacs
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              onClick={[Function]}
            >
              Vim
            </MenuItem>
          </DropdownMenu>
        </ForwardRef>
      </div>
      <div
        className="cog-popover-dropdown"
      >
        <div
          className="cog-popover-dropdown-title"
        >
          Theme
        </div>
        <ForwardRef
          id="themes-dropdown"
        >
          <DropdownToggle
            bsClass="dropdown-toggle"
            bsRole="toggle"
            open={false}
            useAnchor={false}
          >
            Github
          </DropdownToggle>
          <DropdownMenu
            bsClass="dropdown-menu"
            bsRole="menu"
            id="settings-dropdown"
            pullRight={false}
          >
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              onClick={[Function]}
            >
              Github
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              header={false}
              onClick={[Function]}
            >
              Monokai
            </MenuItem>
          </DropdownMenu>
        </ForwardRef>
      </div>
      <div
        className="cog-popover-dropdown"
      >
        <div
          className="cog-popover-dropdown-title"
        >
          Autocompletion
        </div>
        <div
          className="dropdown btn-group"
        >
          <input
            checked={true}
            id="autocompletion-checkbox"
            name="autocompletion"
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
      <div
        className="cog-popover-dropdown"
      >
        <div
          className="cog-popover-dropdown-title"
        >
          Live Autocompletion
        </div>
        <div
          className="dropdown btn-group"
        >
          <input
            checked={false}
            id="live-autocompletion-checkbox"
            name="liveAutocompletion"
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </Popover>
  }
  placement="bottom"
  rootClose={true}
  trigger={
    Array [
      "click",
    ]
  }
>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="link"
    className="editor-button"
    disabled={false}
    id="cog-btn"
  >
    <Icon
      name="cog"
      size="lg"
      type="fa"
    />
  </Button>
</OverlayTrigger>
`;
